--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-testy test
+<h1>NFC fun!</h1>
+<p>So, you may be wondering... What is this weird sticker that I just touched my phone to, and why am I now on this site?</p>
+<h3>Well, that's the magic of NFC!</h3>
