--- a/archives.html
+++ b/archives.html
@@ -1,2 +1,2 @@
 <h1>Archived articles</h1>
-<a href="spheresva.github.io/archihves/1.html">Post 1: starting it out</a>
+<a href="/archihves/1.html">Post 1: starting it out</a>
