--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>NFC fun!</h1>
 <p>So, you may be wondering... What is this weird sticker that I just touched my phone to, and why am I now on this site?</p>
 <h3>Well, that's the magic of NFC!</h3>
+<small>This website is still being made, please be patient :)</small>
+<a href="archives">Archived posts</a>
