--- a/404.html
+++ b/404.html
@@ -1,4 +1,15 @@
+<html>
+<head>
+
+
+<script type="text/javascript">
+function delayer(){
+    window.location = "spheresva.github.io"
+}
+
+</script>
+</head>
 <h1>404!</h1>
 <h2>That page doesn't exist.</h2>
 <p>You'll be redirected to the latest post in 5 seconds</p>
-<meta http-equiv="refresh" content="5;href=spheresva.github.io" />
+<body onLoad="setTimeout('delayer()', 5000)">
