--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 
 <script type="text/javascript">
 function delayer(){
-    window.location = "spheresva.github.io"
+    window.location = "https://spheresva.github.io"
 }
 
 </script>
