--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <small>This website is still being made, please be patient :)</small>
 <a href="archives">Archived posts</a>
+<a href="posts">Post of the day, or month... Or year....</a>
