--- a/404.html
+++ b/404.html
@@ -13,3 +13,4 @@ function delayer(){
 <h2>That page doesn't exist.</h2>
 <p>You'll be redirected to the latest post in 5 seconds</p>
 <body onLoad="setTimeout('delayer()', 5000)">
+<small>Oh, wait, the main site was supposed to be for the most recent post?</small>
