--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<small>This website is still being made, please be patient :)</small>
-<a href="archives">Archived posts</a>
+<small>This website is still being made, please be patient :)</small><br>
+<a href="archives">Archived posts</a><br>
 <a href="posts">Post of the day, or month... Or year....</a>
