--- a/secret/index.html
+++ b/secret/index.html
@@ -1,3 +1,12 @@
 U found the secret page! the secret page! it is a work in progress!!! it is the secret page! wowee! bye now...
 
-<script>await delay(5000); window.close('', '_parent', '');</script>
+<script>
+  function delay(ms) {
+    return new Promise(resolve => setTimeout(resolve, ms));
+  }
+
+  (async function() {
+    await delay(5000); 
+    window.close('', '_parent', '');  
+  })();
+</script>
