--- a/secret/index.html
+++ b/secret/index.html
@@ -1,2 +1,6 @@
 U found the secret page! the secret page! it is a work in progress!!! it is the secret page! wowee! bye now...
 
+<audio controls loop>
+  <source src="https://spheresva.github.io/secret/incredible223232.mp3" type="audio/mpeg">
+  hello
+</audio>
