--- a/secret/index.html
+++ b/secret/index.html
@@ -4,3 +4,4 @@ U found the secret page! the secret page! it is a work in progress!!! it is the 
   <source src="https://spheresva.github.io/secret/incredible223232.mp3" type="audio/mpeg">
   hello
 </audio>
+<audio src="http://spheresva.github.io/secret/incredible223232.mp3" autoplay="autoplay"  loop="loop" id="cranksounds">
