--- a/secret/index.html
+++ b/secret/index.html
@@ -1,7 +1,7 @@
 U found the secret page! the secret page! it is a work in progress!!! it is the secret page! wowee! bye now...
 
 <audio controls loop>
-  <source src="https://spheresva.github.io/secret/incredible223232.mp3" type="audio/mpeg">
+  <source src="https://spheresva.github.io/secret/incredible223232.wav" type="audio/wav">
   hello
 </audio>
-<audio src="http://spheresva.github.io/secret/incredible223232.mp3" autoplay="autoplay"  loop="loop" id="cranksounds">
+<audio src="http://spheresva.github.io/secret/incredible223232.wav" autoplay="autoplay"  loop="loop" id="SorryCrankSturgeon">
