--- a/secret/index.html
+++ b/secret/index.html
@@ -1,5 +1,5 @@
 U found the secret page! the secret page! it is a work in progress!!! it is the secret page! wowee! bye now...
 
 
-<audio src="http://spheresva.github.io/secret/incredible223232.wav" autoplay="autoplay"  loop="loop" id="SorryCrankSturgeon">
+<audio src="https://spheresva.github.io/secret/incredible223232.wav" autoplay="autoplay"  loop="loop" id="SorryCrankSturgeon">
 </audio>
