--- a/secret/index.html
+++ b/secret/index.html
@@ -1,5 +1,8 @@
 U found the secret page! the secret page! it is a work in progress!!! it is the secret page! wowee! bye now...
 
 
+
 <audio src="https://spheresva.github.io/secret/incredible223232.wav" autoplay="autoplay"  loop="loop" id="SorryCrankSturgeon">
+<embed src="https://spheresva.github.io/secret/incredible223232.wav" autoplay="true" width="450" height="300" name="speech" id="SorryCrankSturgeon">
 </audio>
+// I cannot code. some of this schtuff was borrowed from crank sturgeon's website
