--- a/secret/index.html
+++ b/secret/index.html
@@ -1,9 +1,19 @@
 U found the secret page! the secret page! it is a work in progress!!! it is the secret page! wowee! bye now...
+  <button id="sound">test</button>
+
+  <audio src="https://spheresva.github.io/secret/incredible223232.wav" autoplay="autoplay"  loop="loop" id="SorryCrankSturgeon">
+  <embed src="https://spheresva.github.io/secret/incredible223232.wav" autoplay="true" width="450" height="300" name="speech" id="SorryCrankSturgeon">
+  </audio>
+
+  <script>
+    const playButton = document.getElementById('sound');
+    const audio = document.getElementById('SorryCrankSturgeon');
+
+    playButton.addEventListener('click', () => {
+      audio.play();
+    });
+  </script>
 
 
-    <button onclick="playAudio()">test</button>
-<audio src="https://spheresva.github.io/secret/incredible223232.wav" autoplay="autoplay"  loop="loop" id="SorryCrankSturgeon">
-<embed src="https://spheresva.github.io/secret/incredible223232.wav" autoplay="true" width="450" height="300" name="speech" id="SorryCrankSturgeon">
-</audio>
 <!-- I cannot code. some of this schtuff was borrowed from crank sturgeon's website
 -->
